--- a/src/app/presentation/components/category-card/category-card.component.less
+++ b/src/app/presentation/components/category-card/category-card.component.less
@@ -7,6 +7,7 @@
   box-shadow: var(--card-shadow);
   transition: all 0.3s ease;
   padding: 0;
+  width: 100%;
 
   &:hover {
     transform: translateY(-3px);
