--- a/src/app/presentation/components/category-list/category-list.component.html
+++ b/src/app/presentation/components/category-list/category-list.component.html
@@ -4,12 +4,13 @@
     <app-loading-duck message="Daten werden geladen..." duckType="dancing"> </app-loading-duck>
 } @else if (categoriesData === 'load-failed') {
     <app-error-message
-        message="Die Kategorien konnten nicht geladen werden. Bitte versuche es später erneut."
-    ></app-error-message>
+        message="Oh no...!"
+        suggestion="Die Kategorien konnten nicht geladen werden. Bitte versuche es später erneut."
+    />
 } @else {
     @if (categoriesData && categoriesData.length === 0) {
         <div class="empty-container">
-            <img src="assets/duck-lens-transparent.png" alt="Entchen" class="empty-duck-image" />
+            <img src="assets/duck-lens-transparent.png" alt="Entchen" />
             <p class="empty-message">Keine Kategorien gefunden.</p>
             <p class="empty-suggestion">Möchtest du deine erste Kategorie erstellen?</p>
         </div>
