--- a/src/app/presentation/shared/components/loading-duck/loading-duck.component.html
+++ b/src/app/presentation/shared/components/loading-duck/loading-duck.component.html
@@ -1,6 +1,6 @@
 <div class="loading-container">
-    <mat-spinner [diameter]="spinnerDiameter" [color]="spinnerColor" class="loading-spinner">
-    </mat-spinner>
+<!--    <mat-spinner [diameter]="spinnerDiameter" [color]="spinnerColor" class="loading-spinner">-->
+<!--    </mat-spinner>-->
     <div
         [ngClass]="{
             'duck-emoji': duckType === 'swimming',
