[main] Add create item logic

--- a/src/app/presentation/components/category-card/category-card.component.html
+++ b/src/app/presentation/components/category-card/category-card.component.html
@@ -1,21 +1,49 @@
-<mat-card class="category-card">
-    <div class="category-header" (click)="onTogglePanel()">
-        <div class="category-info">
-            <span class="category-emoji">{{ category.emoji }}</span>
-            <span class="category-name">{{ category.name }}</span>
-        </div>
-        <mat-icon class="toggle-button">
-            {{ expanded() ? 'expand_less' : 'expand_more' }}
-        </mat-icon>
-    </div>
+@let categoryData = category();
 
-    @if (expanded()) {
-        <mat-card-content class="category-items" (click)="$event.stopPropagation()">
-            <div class="item-list">
-                @for (item of category.items; track item) {
-                    <app-category-item [item]="item" />
-                }
+@if (categoryData) {
+    <mat-card class="category-card">
+        <div class="category-header" (click)="onTogglePanel()">
+            <div class="category-info">
+                <span class="category-emoji">{{ categoryData.emoji }}</span>
+                <span class="category-name">{{ categoryData.name }}</span>
             </div>
-        </mat-card-content>
-    }
-</mat-card>
+            <mat-icon class="toggle-button">
+                {{ expanded() ? 'expand_less' : 'expand_more' }}
+            </mat-icon>
+        </div>
+
+        @if (expanded()) {
+            <mat-card-content class="category-items" (click)="$event.stopPropagation()">
+                @if (isCreateItemFormSubmitted()) {
+                    <app-loading-duck
+                        duckType="spinning"
+                        message="Okay, Produkt wird erstellt... Quack!"
+                        [spinnerDiameter]="40"
+                    ></app-loading-duck>
+                } @else if (isCategoryItemsListLoading()) {
+                    <app-loading-duck
+                        duckType="dancing"
+                        message="Lade die Liste von Produkten..."
+                        [spinnerDiameter]="40"
+                    ></app-loading-duck>
+                } @else {
+                    <div class="item-list">
+                        @for (item of categoryData.items; track item) {
+                            <app-category-item [item]="item" />
+                        }
+
+                        @if (isCreateItemFormActive()) {
+                            <app-category-item-form [categoryId]="categoryData.id" />
+                        } @else {
+                            <app-custom-button
+                                buttonType="primary"
+                                text="Neues Produkt hinzfügen"
+                                (onClick)="openCreateItemForm()"
+                            />
+                        }
+                    </div>
+                }
+            </mat-card-content>
+        }
+    </mat-card>
+}
