--- a/src/app/presentation/components/category-list/category-list.component.html
+++ b/src/app/presentation/components/category-list/category-list.component.html
@@ -26,6 +26,7 @@
                         [category]="category"
                         [expanded]="isPanelExpanded(category.id)"
                         (toggleExpand)="togglePanel($event)"
+                        (deleteCategory)="onDeleteCategory($event)"
                     />
                 }
             </div>
