--- a/src/styles.less
+++ b/src/styles.less
@@ -78,3 +78,24 @@ a {
 .mat-mdc-card-header-text {
   width: 100%;
 }
+
+/* Dialog Customization */
+.delete-dialog {
+  .mat-mdc-dialog-container {
+    padding: 0 !important;
+    overflow: hidden;
+    border-radius: 16px !important;
+    background-color: var(--popup-background) !important;
+    color: var(--card-text) !important;
+  }
+
+  .mdc-dialog__surface {
+    border-radius: 16px !important;
+    background-color: var(--popup-background) !important;
+    box-shadow: var(--popup-shadow) !important;
+  }
+
+  .mdc-dialog__content {
+    padding: 0 !important;
+  }
+}
